sass/style.scss
@import "normalize";

$background-color: #ddd;
$font-family: 'Open Sans', sans-serif;

// Settings for the brand name
$logo-color: #444;
$logo-size: 28pt;

/* open-sans-300 - latin */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 300;
  src: url('/fonts/open-sans-v18-latin-300.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('/fonts/open-sans-v18-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('/fonts/open-sans-v18-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
       url('/fonts/open-sans-v18-latin-300.woff') format('woff'), /* Modern Browsers */
       url('/fonts/open-sans-v18-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
       url('/fonts/open-sans-v18-latin-300.svg#OpenSans') format('svg'); /* Legacy iOS */
}

html, body {
  height: 100%;
}

body {
  background-color: $background-color;
  font-family: $font-family;
}

div#logo {
  font-size: $logo-size;
  color: $logo-color;
}

.v {
  height: 80%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.h {
  display: flex;
  justify-content: space-around;

  div {
    margin: 2em 1em 2em 1em;
  }
}

